fix(Skeleton): css alignment

--- a/packages/css/skeleton.css
+++ b/packages/css/skeleton.css
@@ -2,58 +2,55 @@
   --dsc-skeleton-animation-duration: 0.8s;
   --dsc-skeleton-background: var(--ds-color-neutral-surface-default);
 
+  animation: ds-skeleton-opacity-fade var(--dsc-skeleton-animation-duration) linear infinite alternate;
+  background: var(--dsc-skeleton-background);
   height: 1.3em;
   pointer-events: none;
   user-select: none;
-  background-color: var(--dsc-skeleton-background);
-  animation: ds-skeleton-opacity-fade var(--dsc-skeleton-animation-duration) linear infinite alternate;
-}
 
-.ds-skeleton--circle {
-  width: 1.3em;
-  border-radius: var(--ds-border-radius-full);
-  aspect-ratio: 1 / 1;
-}
+  &[data-type='circle'] {
+    width: 1.3em;
+    border-radius: var(--ds-border-radius-full);
+    aspect-ratio: 1 / 1;
+  }
 
-.ds-skeleton--rectangle {
-  width: 100%;
-  border-radius: min(1rem, var(--ds-border-radius-lg));
-}
+  &[data-type='rectangle'] {
+    width: 100%;
+    border-radius: min(1rem, var(--ds-border-radius-lg));
+  }
 
-.ds-skeleton--text {
-  width: 100%;
-  height: auto;
-  transform-origin: 0 55%;
-  transform: scale(1, 0.6);
-  border-radius: var(--ds-border-radius-full);
-}
+  &[data-type='text'] {
+    width: 100%;
+    height: auto;
+    transform-origin: 0 55%;
+    transform: scale(1, 0.6);
+    border-radius: var(--ds-border-radius-full);
 
-.ds-skeleton--text:empty::before {
-  content: '\00a0';
-}
+    &:empty::before {
+      content: '\00a0';
+    }
+  }
 
-.ds-skeleton--has-children {
-  width: fit-content;
-  height: fit-content;
-  color: transparent !important;
-}
+  /* When having children, let them define size */
+  &:not(:empty) {
+    width: fit-content;
+    height: fit-content;
+    color: transparent !important;
 
-.ds-skeleton--has-children > * {
-  visibility: hidden;
-}
+    & > * {
+      visibility: hidden;
+    }
+  }
 
-@media (prefers-reduced-motion: reduce) {
-  .ds-skeleton {
-    --dsc-skeleton-animation-duration: 1.6s;
+  @media (prefers-reduced-motion: reduce) {
+    & {
+      --dsc-skeleton-animation-duration: 1.6s;
+    }
   }
 }
 
 @keyframes ds-skeleton-opacity-fade {
-  0% {
-    opacity: 1;
-  }
-
-  100% {
+  to {
     opacity: 0.4;
   }
 }
